[gd_scene load_steps=6 format=3 uid="uid://sh1ninep52yf"]

[ext_resource type="Script" path="res://Assets/Scripts/game.gd" id="1_aiswi"]
[ext_resource type="PackedScene" uid="uid://kdmsoqxpiphs" path="res://Scenes/level_1.tscn" id="2_tkrd8"]
[ext_resource type="Texture2D" uid="uid://0begdng70gmb" path="res://Assets/Sprites/Exported (usable)/Turrets (Ninjas)/red_turret.png" id="3_rjguw"]
[ext_resource type="Texture2D" uid="uid://0kwitmgrct1t" path="res://Assets/Sprites/Exported (usable)/Turrets (Ninjas)/green_turret.png" id="4_tgfa0"]
[ext_resource type="Texture2D" uid="uid://c3sc66a7rmagp" path="res://Assets/Sprites/Exported (usable)/Turrets (Ninjas)/blue_turret.png" id="5_j6fgu"]

[node name="Game" type="Node2D"]
texture_filter = 1
script = ExtResource("1_aiswi")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 325)
limit_left = 0
limit_top = 0
limit_right = 1150
limit_bottom = 650

[node name="Level1" parent="." instance=ExtResource("2_tkrd8")]

[node name="SpawnTimer" type="Timer" parent="."]
autostart = true

[node name="Stats" type="Label" parent="."]
offset_left = 243.0
offset_top = 47.0
offset_right = 283.0
offset_bottom = 70.0

[node name="NextWave" type="Button" parent="."]
offset_left = 38.0
offset_top = 602.0
offset_right = 130.0
offset_bottom = 633.0
text = "Next Wave"

[node name="makeWeak" type="Button" parent="."]
offset_left = 30.0
offset_top = 548.0
offset_right = 83.0
offset_bottom = 637.0
scale = Vector2(0.5, 0.5)
icon = ExtResource("3_rjguw")

[node name="makeMedium" type="Button" parent="."]
offset_left = 69.0
offset_top = 548.0
offset_right = 122.0
offset_bottom = 637.0
scale = Vector2(0.5, 0.5)
icon = ExtResource("4_tgfa0")

[node name="makeStrong" type="Button" parent="."]
offset_left = 110.0
offset_top = 548.0
offset_right = 163.0
offset_bottom = 644.0
scale = Vector2(0.5, 0.5)
icon = ExtResource("5_j6fgu")

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="pressed" from="NextWave" to="." method="_on_button_pressed"]
[connection signal="pressed" from="makeWeak" to="." method="_on_make_weak_pressed"]
[connection signal="pressed" from="makeMedium" to="." method="_on_make_medium_pressed"]
[connection signal="pressed" from="makeStrong" to="." method="_on_make_strong_pressed"]
